[project]
name = "workshop-agentes"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.21",
    "langchain-cerebras>=0.5.0",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.9",
    "langfuse>=2.60.1",
    "langgraph>=0.3.18",
    "jupyterlab>=4.3.6",
    "langchain-groq>=0.3.1",
    "dotenv>=0.9.9",
    "langchain-community>=0.3.20",
    "tavily-python>=0.5.1",
    "autogen-agentchat>=0.4.9.2",
    "autogen-ext[ollama]>=0.4.9.2",
    "streamlit>=1.44.0",
    "gradio>=5.23.1",
    "ipywidgets>=8.1.5",
    "langchain-chroma>=0.2.2",
    "wikipedia>=1.4.0",
    "langchain-huggingface>=0.1.2",
    "flashrank>=0.2.10",
    "sentence-transformers>=4.0.2",
]
